--- a/First webpage/styles.css
+++ b/First webpage/styles.css
@@ -1,5 +1,17 @@
 /*styles.css*/
 
+/* Contents
+    1.Nav bar
+    2.Header
+    3.Content
+    4.Quote
+    5.Sign up
+    6.Footer
+*/
+
+/*``````````````````````
+1.Nav bar
+````````````````````````*/
 h1 {
     font-size: 48px;
     font-weight: extra-bold;
@@ -15,23 +27,45 @@ h1 {
     color:white;
 }
 
-#web_title {
+
+/*`````````````````````
+2.Header
+```````````````````````*/
+.ux_header{
     background-color: #1F2937;
     color: #f9faf8;
+    padding:100px;
     display: flex;
-    flex-flow: column;
 }
 
-.ux_titlePic img{
-    width: 20%;
-    height: auto;
-
-    display: flex;
-    flex-flow: row;
+.ux_title {
+    display:flex;
+    flex-flow: row wrap;
+    align-items: baseline;
+    justify-content: center;
 }
 
+.ux_title button {
+    align-self:flex-end;
+}
 
-#photo-container {
+.ux_titleImg {
+    display: flex;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+
+.ux_titleImg img{
+    max-width: 50%;
+    max-height: auto;
+    object-fit: contain;
+}
+
+/*``````````````````````
+3.Content
+```````````````````````` */
+
+.photo-container {
     /* border:1px solid black; */
     display: flex;
     align-items: center;
@@ -63,7 +97,9 @@ h1 {
     border-radius: 20px;
 }
 
-
+/*`````````````````````
+4.Quote
+``````````````````````` */
 .ux-quotation {
     background-color: #e5e7eb;
     color: #1F2937;
@@ -72,6 +108,14 @@ h1 {
     font-style: italic;
 }
 
+/*`````````````````````
+5.Sign up
+``````````````````````` */
+
+
+/*``````````````````````
+6.Footer
+````````````````````````*/
 footer {
     padding:25px;
     background-color: #1F2937;
