--- a/First webpage/styles.css
+++ b/First webpage/styles.css
@@ -1,16 +1,25 @@
 /*styles.css*/
 
 /* Contents
-    1.Nav bar
-    2.Header
-    3.Content
-    4.Quote
-    5.Sign up
-    6.Footer
+    1.Universal
+    2.Nav bar
+    3.Header
+    4.Content
+    5.Quote
+    6.Sign up
+    7.Footer
 */
 
-/*``````````````````````
-1.Nav bar
+/*```````````````````
+    1.Universal 
+ ````````````````````*/
+
+ body {
+     font-family: Arial, Helvetica, sans-serif;
+ }
+
+ /*``````````````````````
+    2.Nav bar
 ````````````````````````*/
 h1 {
     font-size: 48px;
@@ -29,7 +38,7 @@ h1 {
 
 
 /*`````````````````````
-2.Header
+    3.Header
 ```````````````````````*/
 .ux_header{
     background-color: #1F2937;
@@ -39,14 +48,20 @@ h1 {
 }
 
 .ux_title {
+    padding: 10px;
+    gap:20px;
     display:flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     align-items: baseline;
     justify-content: center;
 }
 
 .ux_title button {
-    align-self:flex-end;
+    background-color: #3882f6;
+    color: white;
+    padding: 10px;
+    justify-content: center;
+
 }
 
 .ux_titleImg {
@@ -62,7 +77,7 @@ h1 {
 }
 
 /*``````````````````````
-3.Content
+    4.Content
 ```````````````````````` */
 
 .photo-container {
@@ -97,8 +112,12 @@ h1 {
     border-radius: 20px;
 }
 
+.content-tile p {
+    align-self: center;
+}
+
 /*`````````````````````
-4.Quote
+    5.Quote
 ``````````````````````` */
 .ux-quotation {
     background-color: #e5e7eb;
@@ -106,15 +125,16 @@ h1 {
     font-size: 36px;
     font-weight: lighter;
     font-style: italic;
+    display: flex;
 }
 
 /*`````````````````````
-5.Sign up
+    6.Sign up
 ``````````````````````` */
 
 
 /*``````````````````````
-6.Footer
+    7.Footer
 ````````````````````````*/
 footer {
     padding:25px;
