--- a/First webpage/styles.css
+++ b/First webpage/styles.css
@@ -53,7 +53,7 @@ h1 {
     padding:100px;
     display: flex;
     gap:20px;
-    justify-content: space-between;
+    justify-content: space-around;
 }
 
 .ux_title {
@@ -68,13 +68,12 @@ h1 {
     background-color: #3882f6;
     color: white;
     padding: 10px;
-
 }
 
 .ux_titleImg {
     display: flex;
     justify-content: center;
-    flex-flow: row wrap;
+    flex-flow: row;
 }
 
 .ux_titleImg img{
@@ -92,11 +91,6 @@ h1 {
     display: flex;
     justify-content: center;
     flex-flow: row wrap;
-}
-
-
-.subtext {
-    display: flex;
 }
 
 .content-tile {
@@ -147,9 +141,10 @@ h1 {
     7.Footer
 ````````````````````````*/
 .footer {
-    color:white;
-    display:flex;
     margin-top:auto;
-    padding-bottom: 0;
-    justify-content: center;
+}
+
+.footer p {
+    color:white;
+    display: flex;
 }
