--- a/First webpage/styles.css
+++ b/First webpage/styles.css
@@ -51,15 +51,17 @@ h1 {
     background-color: #1F2937;
     color: #f9faf8;
     padding:100px;
-    display: flex;
     gap:20px;
+
+    display: flex;
+    flex-basis:100%;
     justify-content: space-around;
 }
 
 .ux_title {
     gap:20px;
     display:flex;
-    flex-flow: row wrap;
+    flex-flow: column wrap;
     align-items: baseline;
     justify-content: center;
 }
@@ -72,13 +74,11 @@ h1 {
 
 .ux_titleImg {
     display: flex;
-    justify-content: center;
-    flex-flow: row;
 }
 
 .ux_titleImg img{
-    max-width: 50%;
-    max-height:max-content;
+    max-width: 100%;
+    max-height:35vh;
     object-fit: contain;
 }
 
